[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Liquids/Liquid.gd" type="Script" id=1]
[ext_resource path="res://Entities/Liquids/water.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Liquid" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastUp" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 0, -38 )
collide_with_areas = true

[node name="RayCastBottom" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 0, 38 )
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( -38, 0 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 38, 0 )
collide_with_areas = true
